fixed “remember” checkbox alignment

--- a/assets/css/lsx-login.scss
+++ b/assets/css/lsx-login.scss
@@ -32,7 +32,8 @@
     display: inline;
     float: none;
     height: auto;
-    margin-top: -3px;
+    margin-right: 5px;
+    margin-top: 0;
     width: auto;
 }
 .loginform p.login-remember label{
